--- a/a_materias.html
+++ b/a_materias.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0 user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
-    <link rel="stylesheet" href="login.css">
-    <title>Login</title>
+    <link rel="stylesheet" href="styles.css">
+    <title>Menu Materias</title>
 </head>
 <body>
+
     <div class="jumbotron jumbotron-fluid mb-0">
         <div class="container">
             <h1 class="display-4">Clover</h1>
@@ -17,7 +18,7 @@
     </div>
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="index.html">
+        <a class="navbar-brand" href="#">
             <img src="https://imgur.com/fNKba6L.png" width="30" height="30" alt="Clover Logo">
             Clover</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
@@ -26,17 +27,17 @@
         <div class="collapse navbar-collapse" id="navbarText">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="register.html">Registrarse</a>
+              <a class="nav-link" href="register.html">Registrarse <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="login.html">Entrar <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="login.html">Entrar</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="teacher.html">Lista de alumnos</a>
-          </li>
-          <li class="nav-item">
-              <a class="nav-link" href="materias.html">Materias</a>
+                <a class="nav-link" href="teacher.html">Lista de alumnos</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" href="materias.html">Materias</a>
+              </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Instrucciones</a>
             </li>
@@ -47,29 +48,32 @@
         </div>
     </nav>
 
-    <section class="login text-center">
+    <section class="menu-materias">
         <div class="container">
-            <h2 class="text-center text-uppercase font-weight-bolder my-3">Login</h2>
-            <form class="form-signin">
-                <div class="form-group">
-                    <img class="mb-2" src="https://imgur.com/fNKba6L.png" alt="Clover Logo" width:"75" height="75"/>
-                    <h3 class="mb-3">Por favor Firma</h3>
-                    <label for="exampleInputEmail1">Email address</label>
-                    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Aquí tu correo" required>
-                    <small id="emailHelp" class="form-text">We'll never share your email with anyone else.</small>
+            <div class="row">
+                <div class="col">
+                    <img src="https://imgur.com/1w8STFb.jpg" class="rounded mx-auto d-block" alt="...">
                 </div>
-                <div class="form-group">
-                        <label for="exampleInputPassword1">Password</label>
-                        <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Aquí tu contraseña" required>
+                <div class="col">
+                    <img src="https://imgur.com/z0n3qUG.jpg" class="rounded mx-auto d-block" alt="...">
                 </div>
-                <div class="form-check mb-2">
-                        <input class="form-check-input" type="checkbox" id="autoSizingCheck">
-                        <label class="form-check-label" for="autoSizingCheck">
-                        Remember me
-                        </label>
+            </div>
+            <div class="row">
+                <div class="col">
+                    <img src="..." class="rounded mx-auto d-block" alt="...">
                 </div>
-                <button type="submit" class="btn btn-primary">Submit</button>
-            </form>
+                <div class="col">
+                    <img src="..." class="rounded mx-auto d-block" alt="...">
+                </div>
+            </div>
+            <div class="row">
+                <div class="col">
+                    <img src="..." class="rounded mx-auto d-block" alt="...">
+                </div>
+                <div class="col">
+                    <img src="..." class="rounded mx-auto d-block" alt="...">
+                </div>
+            </div>
         </div>
     </section>
 
