--- a/alumno.html
+++ b/alumno.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0 user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
-    <link rel="stylesheet" href="login.css">
-    <title>Login</title>
+    <link rel="stylesheet" href="alumno.css">
+    <title>Alumno</title>
 </head>
 <body>
     <div class="jumbotron jumbotron-fluid mb-0">
@@ -29,14 +29,14 @@
               <a class="nav-link" href="register.html">Registrarse</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="login.html">Entrar <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="login.html">Entrar</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="teacher.html">Lista de alumnos</a>
-          </li>
-          <li class="nav-item">
-              <a class="nav-link" href="materias.html">Materias</a>
+                <a class="nav-link" href="teacher.html">Lista de alumnos</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" href="materias.html">Materias <span class="sr-only">(current)</span></a>
+              </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Instrucciones</a>
             </li>
@@ -47,28 +47,34 @@
         </div>
     </nav>
 
-    <section class="login text-center">
+    <section class="alumno">
         <div class="container">
-            <h2 class="text-center text-uppercase font-weight-bolder my-3">Login</h2>
-            <form class="form-signin">
+            <h2 class="text-center text-uppercase font-weight-bolder my-5">Tareas</h2>
+            <form>
+                <p>Aquí debe ir la visualización del archivo que subió el maestro D:</p>
                 <div class="form-group">
-                    <img class="mb-2" src="https://imgur.com/fNKba6L.png" alt="Clover Logo" width:"75" height="75"/>
-                    <h3 class="mb-3">Por favor Firma</h3>
-                    <label for="exampleInputEmail1">Email address</label>
-                    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Aquí tu correo" required>
-                    <small id="emailHelp" class="form-text">We'll never share your email with anyone else.</small>
+                    <div class="card">
+                        <div class="card-body">
+                            Comentarios adicionales del maestro a considerar.
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="exampleFormControlFile1">Descarga el pdf</label>
+                    </div>
+                    <div class="class form-group">
+                        <a href="#" class="btn btn-primary" onclick="">Descargar</a>
+                     </div>
+                </div>
+
+                <div class="form-group">
+                    <label for="exampleFormControlFile1">Carga tu tarea</label>
+                    <input type="file" class="form-control-file" id="exampleFormControlFile1">
                 </div>
                 <div class="form-group">
-                        <label for="exampleInputPassword1">Password</label>
-                        <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Aquí tu contraseña" required>
+                    <label for="exampleFormControlTextarea1">Comentarios para el maestro</label>
+                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
                 </div>
-                <div class="form-check mb-2">
-                        <input class="form-check-input" type="checkbox" id="autoSizingCheck">
-                        <label class="form-check-label" for="autoSizingCheck">
-                        Remember me
-                        </label>
-                </div>
-                <button type="submit" class="btn btn-primary">Submit</button>
+                <button class="btn btn-primary" type="submit">Enviar</button>
             </form>
         </div>
     </section>
@@ -78,9 +84,5 @@
             <span class="text-light">Clover Versión 1.0 - 10052021</span>
         </div>
     </footer>
-
-    <script src="app.js"></script>
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
 </body>
 </html>
