--- a/index.html
+++ b/index.html
@@ -32,6 +32,12 @@
               <a class="nav-link" href="login.html">Entrar</a>
             </li>
             <li class="nav-item">
+                <a class="nav-link" href="teacher.html">Lista de alumnos</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="materias.html">Materias</a>
+              </li>
+            <li class="nav-item">
               <a class="nav-link" href="#">Instrucciones</a>
             </li>
           </ul>
@@ -119,5 +125,10 @@
             <span class="text-light">Clover Versión 1.0 - 10052021</span>
         </div>
     </footer>
+
+    <script src="app.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
+
 </body>
 </html>
