--- a/materias.html
+++ b/materias.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0 user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
-    <link rel="stylesheet" href="login.css">
-    <title>Login</title>
+    <link rel="stylesheet" href="materias.css">
+    <title>Materias</title>
 </head>
 <body>
     <div class="jumbotron jumbotron-fluid mb-0">
@@ -29,14 +29,14 @@
               <a class="nav-link" href="register.html">Registrarse</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="login.html">Entrar <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="login.html">Entrar</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="teacher.html">Lista de alumnos</a>
-          </li>
-          <li class="nav-item">
-              <a class="nav-link" href="materias.html">Materias</a>
+                <a class="nav-link" href="teacher.html">Lista de alumnos</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" href="materias.html">Materias <span class="sr-only">(current)</span></a>
+              </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Instrucciones</a>
             </li>
@@ -47,28 +47,33 @@
         </div>
     </nav>
 
-    <section class="login text-center">
+    <section class="materias">
         <div class="container">
-            <h2 class="text-center text-uppercase font-weight-bolder my-3">Login</h2>
-            <form class="form-signin">
+            <h2 class="text-center text-uppercase font-weight-bolder my-5">Materias</h2>
+            <form>
                 <div class="form-group">
-                    <img class="mb-2" src="https://imgur.com/fNKba6L.png" alt="Clover Logo" width:"75" height="75"/>
-                    <h3 class="mb-3">Por favor Firma</h3>
-                    <label for="exampleInputEmail1">Email address</label>
-                    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Aquí tu correo" required>
-                    <small id="emailHelp" class="form-text">We'll never share your email with anyone else.</small>
+                    <label for="validationCustom04">Materia</label>
+                    <select class="custom-select" id="validationCustom04" required>
+                        <option selected disabled value="">Elige...</option>
+                        <option value="1">Español</option>
+                        <option value="2">Matemáticas</option>
+                        <option value="3">Formación Cívica y Ética</option>
+                        <option value="4">Jalisco</option>
+                        <option value="5">Ciencias Naturales</option>
+                    </select>
+                    <div class="invalid-feedback">
+                        Please select a valid state.
+                    </div>
                 </div>
                 <div class="form-group">
-                        <label for="exampleInputPassword1">Password</label>
-                        <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Aquí tu contraseña" required>
+                    <label for="exampleFormControlFile1">Selecciona el archivo</label>
+                    <input type="file" class="form-control-file" id="exampleFormControlFile1">
                 </div>
-                <div class="form-check mb-2">
-                        <input class="form-check-input" type="checkbox" id="autoSizingCheck">
-                        <label class="form-check-label" for="autoSizingCheck">
-                        Remember me
-                        </label>
+                <div class="form-group">
+                    <label for="exampleFormControlTextarea1">Comentarios adicionales a considerar</label>
+                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
                 </div>
-                <button type="submit" class="btn btn-primary">Submit</button>
+                <button class="btn btn-primary" type="submit">Enviar</button>
             </form>
         </div>
     </section>
