--- a/index.html
+++ b/index.html
@@ -7,16 +7,10 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css">
     <title>Clover</title>
+    <link rel="icon" type="image/png" href="./images/favicon.png">
 </head>
 <body>
-    <div class="jumbotron jumbotron-fluid mb-0">
-        <div class="container">
-            <h1 class="display-4">Clover</h1>
-            <p class="lead">This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
-        </div>
-    </div>
-
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
         <a class="navbar-brand" href="#">
             <img src="https://imgur.com/fNKba6L.png" width="30" height="30" alt="Clover Logo">
             Clover</a>
@@ -25,18 +19,30 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarText">
           <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
+            <li class="nav-item">
               <a class="nav-link" href="register.html">Registrarse <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="login.html">Entrar</a>
             </li>
-            <li class="nav-item">
-                <a class="nav-link" href="teacher.html">Lista de alumnos</a>
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  Maestro
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                  <a class="dropdown-item" href="lista_alumnos.html">Lista de Alumnos</a>
+                  <a class="dropdown-item" href="subir_tareas.html">Subir tareas</a>
+                </div>
+                </li>
+            <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                      Alumno
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                      <a class="dropdown-item" href="alumno_materias.html">Materias</a>
+                      <a class="dropdown-item" href="mi_tarea.html">Ver mi tarea</a>
+                    </div>
             </li>
-            <li class="nav-item">
-                <a class="nav-link" href="materias.html">Materias</a>
-              </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Instrucciones</a>
             </li>
@@ -46,6 +52,15 @@
           </span>
         </div>
     </nav>
+
+    <main class="main">
+        <div class="jumbotron jumbotron-fluid mb-0">
+            <div class="container">
+                <h1 class="display-4">Clover</h1>
+                <p class="lead">This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
+            </div>
+        </div>
+    </main>
 
     <section class="avisos">
         <h2 class="text-center text-uppercase font-weight-bolder my-5">Avisos</h2>
