--- a/login.html
+++ b/login.html
@@ -5,82 +5,97 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0 user-scalable=no">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
-    <link rel="stylesheet" href="login.css">
-    <title>Login</title>
+    <link rel="stylesheet" href="styles.css">
+    <title>Entrar</title>
+    <link rel="icon" type="image/png" href="./images/favicon.png">
 </head>
 <body>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+    <a class="navbar-brand" href="index.html">
+        <img src="https://imgur.com/fNKba6L.png" width="30" height="30" alt="Clover Logo">
+        Clover
+    </a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarText">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item">
+          <a class="nav-link" href="register.html">Registrarse</a>
+        </li>
+        <li class="nav-item active">
+          <a class="nav-link" href="#">Entrar <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Maestro
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item" href="lista_alumnos.html">Lista de Alumnos</a>
+              <a class="dropdown-item" href="subir_tareas.html">Subir tareas</a>
+            </div>
+        </li>
+        <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  Alumno
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                  <a class="dropdown-item" href="alumno_materias.html">Materias</a>
+                  <a class="dropdown-item" href="mi_tarea.html">Ver mi tarea</a>
+                </div>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Instrucciones</a>
+        </li>
+      </ul>
+      <span class="navbar-text">
+        Escuela Primaria Valentín Gómez Farías
+      </span>
+    </div>
+  </nav>
+
+  <main class="main">
     <div class="jumbotron jumbotron-fluid mb-0">
         <div class="container">
             <h1 class="display-4">Clover</h1>
             <p class="lead">This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
         </div>
     </div>
+  </main>
 
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="index.html">
-            <img src="https://imgur.com/fNKba6L.png" width="30" height="30" alt="Clover Logo">
-            Clover</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarText">
-          <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-              <a class="nav-link" href="register.html">Registrarse</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="login.html">Entrar <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="teacher.html">Lista de alumnos</a>
-          </li>
-          <li class="nav-item">
-              <a class="nav-link" href="materias.html">Materias</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Instrucciones</a>
-            </li>
-          </ul>
-          <span class="navbar-text">
-            Escuela Primaria Valentín Gómez Farías
-          </span>
-        </div>
-    </nav>
+  <section class="login text-center">
+      <div class="container">
+          <h2 class="text-center text-uppercase font-weight-bolder my-3">Entrar</h2>
+          <form class="form-signin">
+              <div class="form-group">
+                  <img class="mb-2" src="https://imgur.com/fNKba6L.png" alt="Clover Logo" width:"75" height="75"/>
+                  <h3 class="mb-3">Por favor ingresa tus datos para entrar</h3>
+                  <label for="exampleInputEmail1">Correo electrónico</label>
+                  <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Aquí tu correo" required>
+              </div>
+              <div class="form-group">
+                      <label for="exampleInputPassword1">Contraseña</label>
+                      <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Aquí tu contraseña" required>
+              </div>
+              <div class="form-check mb-2">
+                      <input class="form-check-input" type="checkbox" id="autoSizingCheck">
+                      <label class="form-check-label" for="autoSizingCheck">
+                      Recordar mis datos cada vez que visito el sitio.
+                      </label>
+              </div>
+              <button type="submit" class="btn btn-primary">Enviar</button>
+          </form>
+      </div>
+  </section>
 
-    <section class="login text-center">
-        <div class="container">
-            <h2 class="text-center text-uppercase font-weight-bolder my-3">Login</h2>
-            <form class="form-signin">
-                <div class="form-group">
-                    <img class="mb-2" src="https://imgur.com/fNKba6L.png" alt="Clover Logo" width:"75" height="75"/>
-                    <h3 class="mb-3">Por favor Firma</h3>
-                    <label for="exampleInputEmail1">Email address</label>
-                    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Aquí tu correo" required>
-                    <small id="emailHelp" class="form-text">We'll never share your email with anyone else.</small>
-                </div>
-                <div class="form-group">
-                        <label for="exampleInputPassword1">Password</label>
-                        <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Aquí tu contraseña" required>
-                </div>
-                <div class="form-check mb-2">
-                        <input class="form-check-input" type="checkbox" id="autoSizingCheck">
-                        <label class="form-check-label" for="autoSizingCheck">
-                        Remember me
-                        </label>
-                </div>
-                <button type="submit" class="btn btn-primary">Submit</button>
-            </form>
-        </div>
-    </section>
+  <footer class="footer mt-auto py-3 bg-dark fixed-bottom">
+      <div class="container">
+          <span class="text-light">Clover Versión 1.0 - 10052021</span>
+      </div>
+  </footer>
 
-    <footer class="footer mt-auto py-3 bg-dark fixed-bottom">
-        <div class="container">
-            <span class="text-light">Clover Versión 1.0 - 10052021</span>
-        </div>
-    </footer>
-
-    <script src="app.js"></script>
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
+  <script src="app.js"></script>
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
 </body>
 </html>
