--- a/register.html
+++ b/register.html
@@ -5,18 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
-    <link rel="stylesheet" href="register.css">
+    <link rel="stylesheet" href="styles.css">
     <title>Register</title>
+    <link rel="icon" type="image/png" href="./images/favicon.png">
 </head>
 <body>
-    <div class="jumbotron jumbotron-fluid mb-0">
-        <div class="container">
-            <h1 class="display-4">Clover</h1>
-            <p class="lead">This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
-        </div>
-    </div>
-
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
         <a class="navbar-brand" href="index.html">
             <img src="https://imgur.com/fNKba6L.png" width="30" height="30" alt="Clover Logo">
             Clover</a>
@@ -26,17 +20,29 @@
         <div class="collapse navbar-collapse" id="navbarText">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="register.html">Registrarse <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="#">Registrarse <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="login.html">Entrar</a>
             </li>
-            <li class="nav-item">
-                <a class="nav-link" href="teacher.html">Lista de alumnos <span class="sr-only">(current)</span></a>
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  Maestro
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                  <a class="dropdown-item" href="lista_alumnos.html">Lista de Alumnos</a>
+                  <a class="dropdown-item" href="subir_tareas.html">Subir tareas</a>
+                </div>
+                </li>
+            <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                      Alumno
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                      <a class="dropdown-item" href="alumno_materias.html">Materias</a>
+                      <a class="dropdown-item" href="mi_tarea.html">Ver mi tarea</a>
+                    </div>
             </li>
-            <li class="nav-item">
-                <a class="nav-link" href="materias.html">Materias</a>
-              </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Instrucciones</a>
             </li>
@@ -46,6 +52,15 @@
           </span>
         </div>
     </nav>
+
+    <main class="main">
+        <div class="jumbotron jumbotron-fluid mb-0">
+            <div class="container">
+                <h1 class="display-4">Clover</h1>
+                <p class="lead">This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
+            </div>
+        </div>
+    </main>
 
     <section class="register">
         <div class="container">
@@ -170,6 +185,7 @@
               </script>
         </div>-->
     </section>
+
     <footer class="footer mt-auto py-3 bg-dark fixed-bottom">
         <div class="container">
             <span class="text-light">Clover Versión 1.0 - 10052021</span>
