Este es el commit previo al primer checkpoint: sass

--- a/alumno_materias.html
+++ b/alumno_materias.html
@@ -5,7 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Lobster+Two:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="output.css">
     <title>Menu de Materias para Alumnos</title>
     <link rel="icon" type="image/png" href="./images/favicon.png">
 </head>
@@ -57,22 +60,22 @@
     <main class="main">
         <div class="jumbotron jumbotron-fluid mb-0">
             <div class="container">
-                <h1 class="display-4">Clover</h1>
+                <h1>Clover</h1>
                 <p class="lead">This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
             </div>
         </div>
     </main>
 
-    <section class="menu-materias">
+    <section class="menu-materias section">
         <div class="container">
-            <h2 class="text-center text-uppercase font-weight-bolder my-3">Tus materias</h2>
+            <h2 class="text-center my-3">Tus materias</h2>
             <div class="row row-cols-1 row-cols-md-3">
                 <div class="col mb-4">
                     <div class="card mx-auto" style="width: 200px; align-items: center;">
-                        <img src="https://i.imgur.com/1w8STFb.jpg" class="card-img" alt="..."/>
+                        <img src="https://i.imgur.com/T9u2OZa.jpg" class="card-img" alt="..."/>
                         <div class="card-img-overlay">
                             <a href="https://css-tricks.com/snippets/css/complete-guide-grid/">
-                                <h5 class="card-title text-center">Español</h5>
+                                <h5 class="text-center">Español</h5>
                             </a>
                         </div>
                     </div>
@@ -87,7 +90,7 @@
                 </div>
                 <div class="col mb-4">
                     <div class="card mx-auto" style="width: 200px; align-items: center;">
-                        <img src="https://i.imgur.com/1w8STFb.jpg" class="card-img" alt="...">
+                        <img src="https://i.imgur.com/T9u2OZa.jpg" class="card-img" alt="...">
                         <div class="card-img-overlay">
                             <h5 class="card-title text-center">Español</h5>
                         </div>
