--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Lobster+Two:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="output.css">
     <title>Clover</title>
     <link rel="icon" type="image/png" href="./images/favicon.png">
 </head>
@@ -56,19 +59,19 @@
     <main class="main">
         <div class="jumbotron jumbotron-fluid mb-0">
             <div class="container">
-                <h1 class="display-4">Clover</h1>
-                <p class="lead">This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
+                <h1>Clover</h1>
+                <p class="lead">Text text text text Text text text text Text text text text</p>
             </div>
         </div>
     </main>
 
-    <section class="avisos">
-        <h2 class="text-center text-uppercase font-weight-bolder my-5">Avisos</h2>
+    <section class="avisos section">
+        <h2 class="text-center my-5">Avisos</h2>
         <div class="container">
             <div class="row row-cols-1 row-cols-md-2">
                 <div class="col mb-4">
                     <div class="card h-100">
-                        <img src="..." class="card-img-top" alt="...">
+                        <img src="https://imgur.com/gYFlrRU.png" class="card-img-top" alt="Imagen del aviso 1">
                         <div class="card-body">
                         <h5 class="card-title">15 de mayo: Asueto</h5>
                         <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -80,7 +83,7 @@
                 </div>
                 <div class="col mb-4">
                     <div class="card h-100">
-                        <img src="..." class="card-img-top" alt="...">
+                        <img src="https://imgur.com/BMNeAHd.png" class="card-img-top" alt="...">
                         <div class="card-body">
                         <h5 class="card-title">Plataforma de Iglés</h5>
                         <p class="card-text">A partir del 00/00 la materia de inglés tendrá habilitada la plataforma Fulanita.<br>Informes...</p>
