--- a/lista_alumnos.html
+++ b/lista_alumnos.html
@@ -5,7 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Lobster+Two:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="output.css">
     <title>Lista de Alumnos</title>
     <link rel="icon" type="image/png" href="./images/favicon.png">
 </head>
@@ -56,15 +59,15 @@
     <main class="main">
         <div class="jumbotron jumbotron-fluid mb-0">
             <div class="container">
-                <h1 class="display-4">Clover</h1>
-                <p class="lead">This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
+                <h1>Clover</h1>
+                <p class="lead">Text text text text Text text text text Text text text text</p>
             </div>
         </div>
     </main>
 
-    <section class="lista_alumnos">
+    <section class="lista_alumnos section">
         <div class="container lista1">
-            <h2 class="text-center text-uppercase font-weight-bolder my-5">Lista de alumnos</h2>
+            <h2 class="text-center my-5">Lista de alumnos</h2>
             <div class="container lista2">
                 <div class="row bg-light">
                     <div class="col">&num;</div>
