--- a/login.html
+++ b/login.html
@@ -5,7 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0 user-scalable=no">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Lobster+Two:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="output.css">
     <title>Entrar</title>
     <link rel="icon" type="image/png" href="./images/favicon.png">
 </head>
@@ -24,7 +27,7 @@
           <a class="nav-link" href="register.html">Registrarse</a>
         </li>
         <li class="nav-item active">
-          <a class="nav-link" href="#">Entrar <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="#">Entrar </a>
         </li>
         <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -57,15 +60,15 @@
   <main class="main">
     <div class="jumbotron jumbotron-fluid mb-0">
         <div class="container">
-            <h1 class="display-4">Clover</h1>
+            <h1>Clover</h1>
             <p class="lead">This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
         </div>
     </div>
   </main>
 
-  <section class="login text-center">
-      <div class="container">
-          <h2 class="text-center text-uppercase font-weight-bolder my-3">Entrar</h2>
+  <section class="login section text-center">
+      <div class="container" style="width: 400px;">
+          <h2 class="text-center my-3">Entrar</h2>
           <form class="form-signin">
               <div class="form-group">
                   <img class="mb-2" src="https://imgur.com/fNKba6L.png" alt="Clover Logo" width:"75" height="75"/>
@@ -83,7 +86,7 @@
                       Recordar mis datos cada vez que visito el sitio.
                       </label>
               </div>
-              <button type="submit" class="btn btn-primary">Enviar</button>
+              <button type="submit">Enviar</button>
           </form>
       </div>
   </section>
