--- a/register.html
+++ b/register.html
@@ -5,7 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Lobster+Two:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="output.css">
     <title>Register</title>
     <link rel="icon" type="image/png" href="./images/favicon.png">
 </head>
@@ -56,15 +59,15 @@
     <main class="main">
         <div class="jumbotron jumbotron-fluid mb-0">
             <div class="container">
-                <h1 class="display-4">Clover</h1>
-                <p class="lead">This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
+                <h1>Clover</h1>
+                <p class="lead">Text text text text Text text text text Text text text text</p>
             </div>
         </div>
     </main>
 
-    <section class="register">
-        <div class="container">
-            <h2 class="text-center text-uppercase font-weight-bolder my-3">Registro</h2>
+    <section class="register section">
+        <div class="container" style="width: 400px;">
+            <h2 class="text-center my-3">Registro</h2>
             <form>
                 <div class="form-group">
                     <label for="validationCustom04">Soy...</label>
@@ -157,7 +160,7 @@
                         <input type="password" class="form-control" id="inputPassword3">
                     </div>
                 </div>
-                <button class="btn btn-primary" type="submit">Enviar</button>
+                <button type="submit">Enviar</button>
             </form>
         </div>
 
